--- a/.github/workflows/merge-to-master.yml
+++ b/.github/workflows/merge-to-master.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Build and Publish Docker image
         uses: docker/build-push-action@v2
         env:
-          DOCKERHUB_REPOSITORY: newrelic/newrelic-fluentbit-output
+          DOCKERHUB_REPOSITORY: deepakattardemcd/newrelic-fluentbit-output
           IMAGE_TAG: ${{ env.VERSION }}
         with:
           context: ./
@@ -89,12 +89,12 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache
 
       - name: Inspect published Docker image
-        run: docker buildx imagetools inspect newrelic/newrelic-fluentbit-output:${{ env.VERSION }}
+        run: docker buildx imagetools inspect deepakattardemcd/newrelic-fluentbit-output:${{ env.VERSION }}
 
       - name: Build and Publish Docker debug image
         uses: docker/build-push-action@v2
         env:
-          DOCKERHUB_REPOSITORY: newrelic/newrelic-fluentbit-output
+          DOCKERHUB_REPOSITORY: deepakattardemcd/newrelic-fluentbit-output
           IMAGE_TAG: ${{ env.VERSION }}-debug
         with:
           context: ./
@@ -109,40 +109,40 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache
 
       - name: Inspect published Docker debug image
-        run: docker buildx imagetools inspect newrelic/newrelic-fluentbit-output:${{ env.VERSION }}-debug
+        run: docker buildx imagetools inspect deepakattardemcd/newrelic-fluentbit-output:${{ env.VERSION }}-debug
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: us-east-2
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+#       - name: Login to Amazon ECR
+#         id: login-ecr
+#         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and Publish Docker image for Firelens
-        uses: docker/build-push-action@v2
-        env:
-          ECR_REGISTRY: 533243300146.dkr.ecr.us-east-2.amazonaws.com
-          ECR_REPOSITORY: newrelic/logging-firelens-fluentbit
-          IMAGE_TAG: ${{ env.VERSION }}
-        with:
-          context: ./
-          file: ./Dockerfile_firelens
-          push: true
-          tags: |
-            ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-            ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-          builder: ${{ steps.buildx.outputs.name }}
-          # Firelens image only available for amd64 and arm64 architectures
-          platforms: linux/amd64, linux/arm64
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+#       - name: Build and Publish Docker image for Firelens
+#         uses: docker/build-push-action@v2
+#         env:
+#           ECR_REGISTRY: 533243300146.dkr.ecr.us-east-2.amazonaws.com
+#           ECR_REPOSITORY: newrelic/logging-firelens-fluentbit
+#           IMAGE_TAG: ${{ env.VERSION }}
+#         with:
+#           context: ./
+#           file: ./Dockerfile_firelens
+#           push: true
+#           tags: |
+#             ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+#             ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+#           builder: ${{ steps.buildx.outputs.name }}
+#           # Firelens image only available for amd64 and arm64 architectures
+#           platforms: linux/amd64, linux/arm64
+#           cache-from: type=local,src=/tmp/.buildx-cache
+#           cache-to: type=local,dest=/tmp/.buildx-cache
 
-      - name: Inspect published Docker Firelens image
-        run: docker buildx imagetools inspect 533243300146.dkr.ecr.us-east-2.amazonaws.com/newrelic/logging-firelens-fluentbit:${{ env.VERSION }}
+#       - name: Inspect published Docker Firelens image
+#         run: docker buildx imagetools inspect 533243300146.dkr.ecr.us-east-2.amazonaws.com/newrelic/logging-firelens-fluentbit:${{ env.VERSION }}
 
       - name: Create Release
         id: create_release
