--- a/fluent-bit.conf
+++ b/fluent-bit.conf
@@ -4,9 +4,15 @@
     Log_File      /dev/stdout
 
 [INPUT]
-    Name          tail
-    Path          ${FILE_PATH}
-
+    Name                tail
+    Path                ${FILE_PATH}
+    Mem_Buf_Limit       7MB
+    Skip_Long_Lines     On
+    Refresh_Interval    10
+    #Key                 message
+    Tag                 kube.*
+    Read_from_Head      true
+    Skip_Empty_Lines    On
 [OUTPUT]
     Name          newrelic
     Match         *
