--- a/fluent-bit.conf
+++ b/fluent-bit.conf
@@ -1,7 +1,11 @@
 [SERVICE]
-    Flush         1
     Daemon        Off
-    Log_File      /dev/stdout
+    Flush         1
+    Log_Level     info
+    Parsers_File  parsers.conf
+    HTTP_Server   Off
+    HTTP_Listen   0.0.0.0
+    HTTP_Port     2020
 
 [INPUT]
     Name                tail
@@ -9,10 +13,24 @@
     Mem_Buf_Limit       7MB
     Skip_Long_Lines     On
     Refresh_Interval    10
-    #Key                 message
     Tag                 kube.*
-    Read_from_Head      true
-    Skip_Empty_Lines    On
+    multiline.parser    java, multiline-regex-test
+    skip_empty_lines    On
+    Buffer_Chunk_Size   2k
+
+[FILTER]
+    Name                 kubernetes
+    Match                kube.*
+    Kube_URL             https://kubernetes.default.svc.cluster.local:443
+    Merge_Log            Off
+
+[MULTILINE_PARSER]
+    name          multiline-regex-test
+    type          regex
+    flush_timeout 1000
+    rule      "start_state"   "^\d{4}-\d{2}-\d{2}.*"                    "cont"
+    rule      "cont"          "^(?!\d{4}-\d{2}-\d{2})(.*)"              "cont"
+
 [OUTPUT]
     Name          newrelic
     Match         *
